2010-01-22  Gustavo Noronha Silva  <gns@gnome.org>

        Unreviewed. Updated platform-specific result to account for
        changes done in r53722.

        * platform/gtk/fast/dom/Window/window-property-descriptors-expected.txt:

2010-01-22  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Simon Fraser.

        Checking in platform-specific results for test that is failing
        because of an additional single pixel in size - the test passes,
        when testing manually.

        * platform/gtk/svg/custom/text-zoom-expected.txt: Added.

2010-01-22  Simon Fraser  <simon.fraser@apple.com>

        No review.

        Commit missing test result.

        * fast/dom/Window/webkitConvertPointUpdateLayout-expected.txt: Added.

2010-01-22  Dmitry Titov  <dimich@chromium.org>

        Fix tests, unreviewed. Adding expectations file missing from r53739

        * fast/dom/Window/webkitConvertPointUpdateLayout-expected.txt: Added.

2010-01-22  Steve Falkenburg  <sfalken@apple.com>

        Build fix. Add missing comma.

        * fast/dom/Window/window-properties.html:

2010-01-22  Steve Falkenburg  <sfalken@apple.com>

        Skip fast/dom/Window/window-properties-geolocation.html
        until https://bugs.webkit.org/show_bug.cgi?id=34025 is landed.

        * platform/mac/Skipped:
        * platform/win/Skipped:

2010-01-22  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=34024
        Layout tests don't easily allow Geolocation to be on in only a subset of platforms

        * fast/dom/Window/window-properties-geolocation-expected.txt: Added.
        * fast/dom/Window/window-properties-geolocation.html: Copied from fast/dom/Window/window-properties.html.
        Moved Geolocation property testing here.
        * fast/dom/Window/window-properties.html: Exclude Geolocation from testing. Moved to window-properties-geolocation.html.