@@ -1,3 +1,14 @@
+2010-01-22  Steve VanDeBogart  <vandebo@chromium.org>
+
+        Reviewed by David Levin.
+
+        A new test to check that middle clicking on the primary scroll bars
+        does not trigger a paste event.
+        https://bugs.webkit.org/show_bug.cgi?id=33062
+
+        * scrollbars/scrollbar-middleclick-nopaste-expected.txt: Added.
+        * scrollbars/scrollbar-middleclick-nopaste.html: Added.
+
 2010-01-22  Gustavo Noronha Silva  <gns@gnome.org>
 
         Unreviewed. Updated platform-specific result to account for
